# turms

./: .gitignore  404.html  CHANGELOG.md  FUNDING.yml  LICENSE  README.md  a.yaml  beast_two.py  beasts.graphql  beasts.py  cli.py  conv.py  cov.xml  default.schema.graphql  f.py  fr.graphql  graphql.config.yaml  helper.py  index.html  l.py  merge_tree.py  new_beasts.py  pyproject.toml  sdfsdf.py  show_tree.py  sitemap.xml  t.py  te.py  test.py  test_evn.py  tox.ini  tt.py  ttt.py  x.py  xxx.py
.github/: copilot-instructions.md  docker-master.yaml
.github/workflows/: coverage.yaml  deploy.yaml  docker-master.yaml  release.yaml  tests.yaml
api/: schema.py
arkitekt/api/: schema.py
assets/css/: styles.7ad94c95.css
assets/js/: 0008c4ca.0b263fa6.js  0008c4ca.176fbd70.js  0008c4ca.601dd389.js  01a85c17.f25d6278.js  0453b13a.2f5a674c.js  0453b13a.8f57d81a.js  0453b13a.d3b95a6d.js  08e57fe9.0fbaf0fc.js  0a5964ff.0fed9875.js  0a5964ff.1cc02bb6.js  0a5964ff.81b2b8d2.js  0e384e19.34497dae.js  0e384e19.793f9fcc.js  0e384e19.97c1cc5d.js  0e384e19.c23acdff.js  0e384e19.def1d493.js  0e384e19.e179a66e.js  0e384e19.f8ac3ad5.js  0e90d866.590e9df5.js  0e90d866.e6989595.js  0f9d5210.4189f5a6.js  0f9d5210.514ac2bd.js  0f9d5210.f3b4b25a.js  122ca2ac.57b8db97.js  17896441.701046f7.js  1bd7b2c0.24f4c6d6.js  1bd7b2c0.88bd4548.js  1bd7b2c0.a3863069.js  1bd7b2c0.dd7f6125.js  1be78505.76946f55.js  1df93b7f.4b291b9e.js  1df93b7f.7f9a42e5.js  1df93b7f.ab343daf.js  1df93b7f.c2ea4a93.js  1f391b9e.f7c3b9a1.js  27f27def.ea63edc6.js  2f5325c5.06607cd7.js  2f5325c5.ece2c2fe.js  2f5325c5.fc8b434c.js  339e3595.f6909d45.js  (+162 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/rath/: index.html
docs/config/: index.html
docs/design/intro/: index.html
docs/design/parsers/: index.html
docs/design/plugins/: index.html
docs/design/processors/: index.html
docs/design/stylers/: index.html
docs/design/traits/: index.html
docs/intro/: index.html
docs/plugins/enums/: index.html
docs/plugins/fragments/: index.html
docs/plugins/funcs/: index.html
docs/plugins/inputtype/: index.html
docs/plugins/operations/: index.html
docs/plugins/operationsfuncs/: index.html
docs/plugins/strawberry/: index.html
docs/rath/: index.html
docs/reference/config/: index.html
docs/reference/console/: index.html
docs/reference/errors/: index.html
docs/reference/globals/: index.html
docs/reference/helpers/: index.html
docs/reference/mocks/: index.html
docs/reference/recurse/: index.html
docs/reference/registry/: index.html
docs/reference/run/: index.html
docs/reference/utils/: index.html
docs/turms/: index.html
docs/usecases/intro/: index.html
examples/: generation.py
examples/api/: schema.py
examples/beasts-strawberry/: README.md  beasts.graphql  graphql.config.yaml
examples/gql-usage/: README.md  graphql.config.yaml  main.py  pyproject.toml
examples/gql-usage/your_library/: proxies.py  schema.py
examples/pydantic-basic/: graphql.config.yaml  main.py  pyproject.toml
examples/rath-usage/: README.md  graphql.config.yaml  main.py  pyproject.toml
examples/rath-usage/your_documents/: capsule.graphql
examples/rath-usage/your_library/: proxies.py  schema.py
gg/: schema.py
graphql/: test.graphql
markdown-page/: index.html
snapshots/: test_py.txt
tests/: conftest.py  mocks.py  test_all.py  test_annotated_markers.py  test_builtin_graphql_types.py  test_cli.py  test_coercible_types.py  test_complete_from_file.py  test_complete_generation.py  test_config.py  test_countries.py  test_countries_v1.py  test_documentation.py  test_documentation_v1.py  test_env.py  test_exclude_unset.py  test_file.py  test_forward_reference_to_interface.py  test_forward_reference_to_interface_v1.py  test_freeze.py  test_funcs.py  test_funcs_no_collapse.py  test_gen.py  test_helpers.py  test_import.py  test_init_settings.py  test_input_default_values.py  test_input_funcs.py  test_introspect.py  test_keyword.py  test_load_config.py  test_merge_processor.py  test_mro.py  test_mulitple_inheritance.py  test_multi_interface.py  test_multiple_forward_references.py  test_nested_input.py  test_non_implemented_interfaces.py  test_operations.py  test_operations_v1.py  (+13 more)
tests/configs/: test_cli.yaml  test_cli_multi_projects.yaml  test_cli_no_error.yaml  test_countries.yaml  test_unreferenced.yaml
tests/introspection/: spacex.json
tests/merge_pairs/: new.py  old.py  updated.py
tests/plugins/: conftest.py  test_inputs.py  test_objects.py  utils.py
tests/schemas/: arkitekt.graphql  beasts.graphql  builtin.graphql  directive.graphql  forward_reference_to_interface.graphql  helloworld.graphql  helloworld_bom.graphql  interface_without_implementating_types.graphql  keyword.graphql  list_field_directive.graphql  mro.graphql  multi_interface.graphql  multiple_forward_references.graphql  multiple_inhertiance.graphql  nested_inputs.graphql  oneof.graphql  scalars.graphql  union.graphql
turms/: ast_generators.py  config.py  console.py  errors.py  globals.py  helpers.py  mocks.py  recurse.py  referencer.py  registry.py  rules.py  run.py  turms  utils.py
turms/cli/: main.py  watch.py
turms/compat/: console.py  funcs.py
turms/parser/: imports.py  recurse.py
turms/parsers/: base.py  polyfill.py
turms/plugins/: base.py  dd.py  enums.py  fragments.py  funcs.py  input_funcs.py  inputs.py  objects.py  operation.py  operations.py  schema.py  strawberry.py  structure.py
turms/processor/: base.py  black.py  isort.py
turms/processors/: base.py  black.py  command.py  disclaimer.py  isort.py  merge.py  ruff.py
turms/stylers/: __init__.py  appender.py  base.py  capitalize.py  default.py  snake.py  snake_case.py
turms/transport/: base.py
turms/types/: herre.py  mutation.py  object.py  operation.py  query.py  scalar.py  utils.py
website/: CNAME  docusaurus.config.js  package.json
website/blog/: 2021-08-01-mdx-blog-post.mdx  authors.yml
website/docs/: config.md  intro.md  migration-defaults-unset.md  rath.md  turms.md
(+163 files in other folders)
