[project]
name = "turms"
version = "0.9.0"
description = "graphql-codegen powered by pydantic"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Development Status :: 6 - Mature",
]
dependencies = [
    "rich>=11",
    "graphql-core>=3.2.0,<4",
    "pydantic>2",
    "PyYAML>=5.3.0",
    "rich-click>=1.6",
    "pydantic-settings>=2.5.2,<3",
    "watchfiles>=0.18.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
watch = ["watchfiles>=0.18.1"]
black = ["black>=22.1.0"]
isort = ["isort>=5.10.1"]
merge = ["libcst>=1.4.0"]

[project.urls]
Homepage = "https://jhnnsrs.github.io/turms"
Repository = "https://github.com/jhnnsrs/turms"

[project.scripts]
turms = "turms.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5,<7",
    "pytest-aiohttp>=0.3.0,<0.4",
    "pytest-cov>=3.0.0,<4",
    "tox>=3.24.5,<4",
    "isort>=5.10.1,<6",
    "black>=22.1.0,<23",
    "pylint>=2.12.2,<3",
    "autoflake~=1.4",
    "strawberry-graphql>=0.151.0,<0.152",
    "libcst>=1.4.0,<2",
    "requests>=2.28.1,<3",
    "pytest-snapshot>=0.9.0,<0.10",
    "python-semantic-release>=9.21.1",
]

[tool.hatch.build.targets.sdist]
include = ["turms"]

[tool.hatch.build.targets.wheel]
include = ["turms"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["turms"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
